--- a/app/views/client_views/layout2/delivery_template.html.haml
+++ b/app/views/client_views/layout2/delivery_template.html.haml
@@ -4,20 +4,20 @@
 			#header-image{"ng-style" => "header_image_styling()"}
 	#petition-container
 		#delivery-headline.section-header.text-center
-			%h2.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.delivery_headline_primary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Headline", "name"=>"delivery_headline_primary", "required"=>""}
-			%h5.contenteditable.placeholder-showing{"contenteditable"=>"{{is_admin}}", "ng-model" => "petition.delivery_headline_secondary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Sub-Headline", "name"=>"delivery_headline_secondary", "required"=>""}
+			%h2.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.delivery_template.headline_primary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Headline", "name"=>"delivery_headline_primary", "required"=>""}
+			%h5.contenteditable.placeholder-showing{"contenteditable"=>"{{is_admin}}", "ng-model" => "content.delivery_template.headline_secondary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Sub-Headline", "name"=>"delivery_headline_secondary", "required"=>""}
 		#delivery-container-wrapper
 			.panel.panel-default.panel-indented
 				.row#petition-subheadline
 					.col-md-12
-						%h4.text-center.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.delivery_subheadline", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Sub-Headline", "name"=>"delivery_sub_headline"}
+						%h4.text-center.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.delivery_template.subheadline", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Sub-Headline", "name"=>"delivery_sub_headline"}
 				.row
 					.col-md-6.top-content-wrapper{"ng-show"=>"has_delivery_image()"}
 						%div{"image-upload-overlay"=>"", "title"=>"Add Delivery Image", "notes"=>"Recommended image size: 350x350px", "image-name"=>"delivery_image", "is-admin"=>"is_admin"}
 							%div#petition-image{"ng-style" => "delivery_image_styling()"}
 					.top-content-wrapper{"ng-class"=>"set_content_width()"}
 						%div.delivery-form-container
-							%h4.contenteditable.placeholder-showing{:style => "font-size: 1.4em", "contenteditable"=>"", "ng-model" => "petition.delivery_call_to_action_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Call to Action Headline", "name"=>"delivery_call_to_action_text", "required"=>""}
+							%h4.contenteditable.placeholder-showing{:style => "font-size: 1.4em", "contenteditable"=>"", "ng-model" => "content.delivery_template.call_to_action_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Call to Action Headline", "name"=>"delivery_call_to_action_text", "required"=>""}
 							%div{"ng-switch"=>"disable_forms"}
 								%form{"ng-switch-when"=>"false", :name => "tweet_form", "novalidate" => true, "role"=>"form"}		
 									.form-group
@@ -28,25 +28,25 @@
 									.form-group
 										.col-md-12
 											%button.btn.btn-primary#sign-with-email-address-button{"ng-click" => "deliver_action(tweet_form)", "custompopover" => "{{error_messages.deliver_tweet}}",  "custompopover-toggle" =>"error_messages.deliver_tweet.length > 0", "custompopover-trigger" => "manual", "custompopover-placement" => "top"}
-												%span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.delivery_call_to_action_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Call to Action Button Text", "name"=>"delivery_call_to_action_button_text", "required"=>""}
+												%span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.delivery_template.call_to_action_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Call to Action Button Text", "name"=>"delivery_call_to_action_button_text", "required"=>""}
 									.form-group
 										.col-md-12
 											%button.btn.btn-link{"ng-click" => "skip_delivery()"}
-												%span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.delivery_skip_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Skip Button Text", "name"=>"delivery_skip_button_text", "required"=>""}
+												%span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.delivery_template.skip_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Skip Button Text", "name"=>"delivery_skip_button_text", "required"=>""}
 								%div{"ng-switch-when"=>"true"}		
 									.form-group
 										.col-md-12
 											.drop-shadow-full{:style=>"margin-bottom: 20px;"}
-												%div.contenteditable.placeholder-showing.text-left{:style=>"height: 80px", "contenteditable"=>"", "ng-model"=>"petition.default_tweet_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Default Tweet Message", "name"=>"default_tweet_text", "required"=>""}
+												%div.contenteditable.placeholder-showing.text-left{:style=>"height: 80px", "contenteditable"=>"", "ng-model"=>"content.delivery_template.default_tweet_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Default Tweet Message", "name"=>"default_tweet_text", "required"=>""}
 												#message-counter.text-right {{115 - get_tweet_message_length()}}	
 									.form-group
 										.col-md-12
 											%button.btn.btn-primary#sign-with-email-address-button{"ng-click" => "deliver_action(form)", "custompopover" => "{{error_messages.deliver_tweet}}",  "custompopover-toggle" =>"error_messages.deliver_tweet.length > 0", "custompopover-trigger" => "manual", "custompopover-placement" => "top"}
-												%span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.delivery_call_to_action_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Call to Action Button Text", "name"=>"delivery_call_to_action_button_text", "required"=>""}
+												%span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.delivery_template.call_to_action_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Call to Action Button Text", "name"=>"delivery_call_to_action_button_text", "required"=>""}
 									.form-group
 										.col-md-12
 											%button.btn-link{"ng-click" => "skip_delivery()"}
-												%span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.delivery_skip_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Skip Button Text", "name"=>"delivery_skip_button_text", "required"=>""}
+												%span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.delivery_template.skip_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Skip Button Text", "name"=>"delivery_skip_button_text", "required"=>""}
 
 				#signature-count-outer-wrapper
 					#signature-count-wrapper
@@ -54,7 +54,7 @@
 							.progress
 								.progress-bar{:style => "width: {{calculate_petition_tweet_percentage()}}%;", "role"=>"progressbar", "aria-valuenow"=>"{{calculate_petition_tweet_percentage()}}", "aria-valuemin"=>"0", "aria-valuemax"=>"100"}
 								.target-count
-									%span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.target_count", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Target Number of Signatures", "name"=>"target_count","required"=>""}
+									%span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.delivery_template.target_count", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Target Number of Signatures", "name"=>"target_count","required"=>""}
 							#signature-count
 								{{get_number_of_tweets()}}
 		#user-signature-header.section-header.text-left
@@ -78,8 +78,8 @@
 					Be the first to deliver your message.
 			.bottom-margin#more-tweets-button-wrapper
 				%button.btn.btn-primary#more-tweets-button{"ng-hide"=>"tweets.items.length >= tweets.total", "ng-click"=>"show_more_tweets_click()"}
-					%span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.delivery_more_tweets_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery More Tweets Button Text", "name"=>"delivery_more_tweets_button_text","required"=>""}
+					%span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.delivery_template.more_tweets_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery More Tweets Button Text", "name"=>"delivery_more_tweets_button_text","required"=>""}
 	.client-logo-wrapper{"ng-show"=>"has_header_image()"}
 		.client-logo.text-center#client-logo-bottom{:style=>"height: 50px", "image-upload-overlay"=>"", "title"=>"Add Footer Image", "notes"=>"Recommended image size: 950x250px", "image-name"=>"footer_image_full", "is-admin"=>"is_admin"}
 			#footer-image{"ng-style" => "footer_image_styling()"}
-			.disclaimer.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.disclaimer_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Disclaimer Text", "name"=>"disclaimer_text"}
+			.disclaimer.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.delivery_template.disclaimer_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Disclaimer Text", "name"=>"disclaimer_text"}
