--- a/app/views/clients/partials/_email_config.ng.html.haml
+++ b/app/views/clients/partials/_email_config.ng.html.haml
@@ -6,7 +6,7 @@
 		.row
 			.col-md-9{:style=>"height: 30px; line-height: 30px;"}
 				{{config.email_type.name}}
-			.col-md-3
+			.col-md-3{:style=>"height: 30px; line-height: 30px;"}
 				.text-right
 					%toggle-switch{"model"=>"config.enabled", "ng-model"=>"config.enabled"}
 	.panel-body
