--- a/app/views/layouts/clients/_sidebar.html.haml
+++ b/app/views/layouts/clients/_sidebar.html.haml
@@ -1,4 +1,4 @@
-#sidebar-left.col-md-2.no-gutter{"ng-controller" => "SidebarController", "size-column"=>""}
+#sidebar-left.col-md-2.no-gutter{"ng-controller" => "SidebarController"}
   .nav-collapse.sidebar-nav
     %ul.nav.nav-tabs.nav-stacked.main-menu
       %li
