--- a/app/views/layouts/petitions.html.haml
+++ b/app/views/layouts/petitions.html.haml
@@ -22,6 +22,9 @@
       petition =
       != @petition ? @petition.to_api.to_json : nil
 
+      content = 
+      != @content ? @content.to_json : nil
+
       signature =
       != @signature ? @signature.to_api.to_json : false
 
