--- a/app/views/client_views/layout1/signature_template.html.haml
+++ b/app/views/client_views/layout1/signature_template.html.haml
@@ -1,19 +1,19 @@
 .text-center{:style=>"width: auto"}
   %div{"image-upload-overlay"=>"", "title"=>"Add Header Image", "notes"=>"Recommended image size: 950x250px", "image-name"=>"header_image_full", "is-admin"=>"is_admin"}
     .drop-shadow.lifted#header-image{"ng-style" => "header_image_styling()"}
-  %h2#petition-headline.contenteditable.placeholer-showing{"contenteditable"=>"", "ng-model" => "petition.headline_primary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Signature Headline", "name"=>"headline_primary", "required"=>""}
-  %h1.title.contenteditable.placeholer-showing{"contenteditable"=>"", "ng-model" => "petition.headline_secondary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Signature Headline (Secondary)", "name"=>"headline_secondary", "required"=>""}
+  %h2#petition-headline.contenteditable.placeholer-showing{"contenteditable"=>"", "ng-model" => "content.signature_template.headline_primary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Signature Headline", "name"=>"headline_primary", "required"=>""}
+  %h1.title.contenteditable.placeholer-showing{"contenteditable"=>"", "ng-model" => "content.signature_template.headline_secondary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Signature Headline (Secondary)", "name"=>"headline_secondary", "required"=>""}
   %p.description
-    %span.contenteditable.placeholer-showing{:style=>"display: block", "contenteditable"=>"", "ng-model" => "petition.summary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Petition Summary", "name"=>"summary", "required"=>""}
+    %span.contenteditable.placeholer-showing{:style=>"display: block", "contenteditable"=>"", "ng-model" => "content.signature_template.summary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Petition Summary", "name"=>"summary", "required"=>""}
   #action-wrapper
     #sign-panel{:style => "margin: 20px 0px 40px 0px"}
       #sign-petition-signature
         #signature-container{"data-facebook" => Settings.facebook_app_id }
           #sign-why.solid-white-back{:style => "text-align: left;"}
-            %textarea#comment{:maxlength => "115", :style => "width: 90%", :placeholder => "{{petition.signature_comment_placeholder_text || 'Tell Us Why You are Signing...'}}", "ng-model" => "signature.comment"}
+            %textarea#comment{:maxlength => "115", :style => "width: 90%", :placeholder => "{{content.signature_template.signature_comment_placeholder_text || 'Tell Us Why You are Signing...'}}", "ng-model" => "signature.comment"}
             #message-counter.text-right {{115 - signature.comment.length}}
           %button.drop-shadow.lifted.action-button.icon#sign-with-fb-button{"ng-click" => "fetch()"}
-            %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.sign_with_facebook_cta_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action Text", "name"=>"sign_with_facebook_cta_button_text", "required"=>""}
+            %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.signature_template.sign_with_facebook_cta_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action Text", "name"=>"sign_with_facebook_cta_button_text", "required"=>""}
         %div#copy-or
           \-OR-
         #sign-petition{"ng-switch"=>"disable_forms"}
@@ -41,7 +41,7 @@
             .form-group.row
               .col-md-12
                 %button#sign-petition-user-name.button.action-button{:style => "width: 100%", "ng-click" => "sign_with_email_address(myForm)"}
-                  %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.sign_with_email_cta_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action Text", "name"=>"sign_with_email_cta_button_text", "required"=>""}
+                  %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.signature_template.sign_with_email_cta_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action Text", "name"=>"sign_with_email_cta_button_text", "required"=>""}
 
           %div{"ng-switch-when"=>"true"}
             .form-group.row
@@ -67,7 +67,7 @@
             .form-group.row
               .col-md-12
                 %button#sign-petition-user-name.button.action-button{:style => "width: 100%", "ng-click" => "sign_with_email_address(myForm)"}
-                  %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.sign_with_email_cta_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action Text", "name"=>"sign_with_email_cta_button_text", "required"=>""}
+                  %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.signature_template.sign_with_email_cta_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action Text", "name"=>"sign_with_email_cta_button_text", "required"=>""}
                 .controls{:style => "padding: 0px 20px"}
                   %label.checkbox{:style => "text-align: left"}
                     %input#chkEmailSignUp{:checked => "", :type => "checkbox", "ng-model" => "signature.opt_in"}
@@ -81,20 +81,20 @@
       #target-count-progress-wrapper.col-md-11.solid-white-back.drop-shadow-full
         #progress-bar-outer-wrapper
           #progress-bar-wrapper.progress.progress-striped.progress-green
-            #progress-bar.bar.orange-bar{:style => "width: {{get_percentage_signed(petition.signature_count, petition.target_count)}}%;"}
-            %span#progress-marker.mark{:style => "left: {{load_progress_marker(petition.signature_count, petition.target_count)}}"}
+            #progress-bar.bar.orange-bar{:style => "width: {{get_percentage_signed(petition.signature_count, content.signature_template.target_count)}}%;"}
+            %span#progress-marker.mark{:style => "left: {{load_progress_marker(petition.signature_count, content.signature_template.target_count)}}"}
       #petition-target-count-goal.col-md-1.target-count-goal
         %span.nobr
-          {{ get_percentage_signed(petition.signature_count, petition.target_count) }}
+          {{ get_percentage_signed(petition.signature_count, content.signature_template.target_count) }}
           \%
     .row
       .col-md-6.col-sm-6.col-xs-6.action-count{:style => "text-align: left; padding-left: 22px;"}
         Signers:
         %span#signature_count
-          {{petition.signature_count}}
+          {{content.signature_template.signature_count}}
       .col-md-6.col-sm-6.col-xs-6.action-count{:style => "text-align: right; padding-right: 44px"}
         Goal: 
-        %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.target_count", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Target Number of Signatures","name"=>"target_count", "required"=>""}
+        %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.signature_template.target_count", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Target Number of Signatures","name"=>"target_count", "required"=>""}
   #comment-container.comment-wrapper{:style => "margin-bottom: 40px;", "ng-controller" => "CommentController"}
     %div{:style => "margin-bottom: 25px", "ng-repeat" => "signature in comments.items | orderBy: 'created_at':true"}
       .media.comment-container.comment.solid-white-back.drop-shadow-full.clear-fix
@@ -112,9 +112,9 @@
       
     #see-more-container{"ng-hide"=>"comments.items.length >= comments.total"}
       %button#see-more-button.button.action-button{:style => "width: 100%", "ng-click" => "show_more_signatures_click()"}
-        %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.signature_more_signers_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"More Signers Button Text", "name"=>"signature_more_signers_button_text","required"=>""}
+        %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.signature_template.signature_more_signers_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"More Signers Button Text", "name"=>"signature_more_signers_button_text","required"=>""}
   #disclaimer-text
-    .disclaimer.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.disclaimer_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Disclaimer Text", "name"=>"disclaimer_text"}
+    .disclaimer.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.signature_template.disclaimer_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Disclaimer Text", "name"=>"disclaimer_text"}
   #powered-by-wrapper
     %a#powered-by-container.row.text-right{"href" => "http://www.snaptivist.com", :style => "display: block"}
       = image_tag "powered_by.png"
