--- a/app/views/client_views/layout2/premium_template.html.haml
+++ b/app/views/client_views/layout2/premium_template.html.haml
@@ -4,12 +4,12 @@
 			#header-image{"ng-style" => "header_image_styling()"}
 	#petition-container
 		#premium-headline.section-header.text-center
-			%h2.contenteditable.placeholder-showing{"contenteditable"=>"{{is_admin}}", "ng-model" => "petition.premium_headline_primary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Premium Headline", "name"=>"premium_headline_primary", "required"=>""}
-			%h5.contenteditable.placeholder-showing{"contenteditable"=>"{{is_admin}}", "ng-model" => "petition.premium_headline_secondary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Premium Sub-Headline", "name"=>"premium_headline_secondary", "required"=>""}
+			%h2.contenteditable.placeholder-showing{"contenteditable"=>"{{is_admin}}", "ng-model" => "content.premium_template.headline_primary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Premium Headline", "name"=>"premium_headline_primary", "required"=>""}
+			%h5.contenteditable.placeholder-showing{"contenteditable"=>"{{is_admin}}", "ng-model" => "content.premium_template.headline_secondary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Premium Sub-Headline", "name"=>"premium_headline_secondary", "required"=>""}
 		.panel.panel-default.panel-indented
 			.row#petition-subheadline
 				.col-md-12
-					%h4.text-center.contenteditable.placeholder-showing{"contenteditable"=>"{{is_admin}}", "ng-model" => "petition.premium_subheadline", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Premium Sub-Headline","name"=>"premium_subheadline"}
+					%h4.text-center.contenteditable.placeholder-showing{"contenteditable"=>"{{is_admin}}", "ng-model" => "content.premium_template.subheadline", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Premium Sub-Headline","name"=>"premium_subheadline"}
 			.row
 				.col-md-6.top-content-wrapper
 					#petition-image-wrapper{"image-upload-overlay"=>"", "title"=>"Add Premium Image", "notes"=>"Recommended image size: 350x350px", "image-name"=>"premium_image", "is-admin"=>"is_admin"}
@@ -38,7 +38,7 @@
 								%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"Email Address", "required"=>"", "ng-model"=>"premium_registration.email_address"}
 							.form-group
 								%button.btn.btn-primary{"ng-click"=>"premium_submit_clicked(myForm)"}
-									%span.contenteditable.placeholder-showing{"contenteditable"=>"{{is_admin}}", "ng-model" => "petition.premium_call_to_action_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action Button", "name"=>"premium_call_to_action_button_text", "required"=>""}
+									%span.contenteditable.placeholder-showing{"contenteditable"=>"{{is_admin}}", "ng-model" => "content.premium_template.call_to_action_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action Button", "name"=>"premium_call_to_action_button_text", "required"=>""}
 						%div{"ng-switch-when"=>"true"}
 							.row.form-group.clearfix
 								.col-md-6.text-left#first-name-wrapper
@@ -61,8 +61,8 @@
 								%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"Email Address"}
 							.form-group
 								%button.btn.btn-primary{"ng-click"=>"premium_submit_clicked(myForm)"}
-									%span.contenteditable.placeholder-showing{"contenteditable"=>"{{is_admin}}", "ng-model" => "petition.premium_call_to_action_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action Button", "name"=>"premium_call_to_action_button_text", "required"=>""}
+									%span.contenteditable.placeholder-showing{"contenteditable"=>"{{is_admin}}", "ng-model" => "content.premium_template.call_to_action_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action Button", "name"=>"premium_call_to_action_button_text", "required"=>""}
 	.client-logo-wrapper
 		.client-logo.text-center#client-logo-bottom{:style=>"height: 50px", "image-upload-overlay"=>"", "title"=>"Add Footer Image", "notes"=>"Recommended image size: 950x250px", "image-name"=>"footer_image_full", "is-admin"=>"is_admin"}
 			#footer-image{"ng-style" => "footer_image_styling()"}
-			.disclaimer.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.disclaimer_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Disclaimer Text", "name"=>"disclaimer_text"}
+			.disclaimer.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.premium_template.disclaimer_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Disclaimer Text", "name"=>"disclaimer_text"}
