--- a/app/views/clients/_petition_setup.ng.html.haml
+++ b/app/views/clients/_petition_setup.ng.html.haml
@@ -1,40 +1,48 @@
-.setup_give_flow{"size-column"=>""}
+%div{:style=>"background-color: #f0f1f6", "ng-controller"=>"NavigationController"}
+	.row.no-gutter{:style=>"min-height: 80px; width:1164; margin: 0px auto;"}
+		.col-md-9
+			%h2.contenteditable.petition-title{:style=>"display: inline-block; line-height: 54px;", "contenteditable"=>"true", "ng-model" => "petition.title", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Give Your Campaign a Name", "name"=>"petition_name", "required"=>""}
+				New Campaign Name
+			%ul.nav.nav-tabs
+				%li.text-center{"ng-class"=>"{ active: (settings.step == 1)}"}
+					%a{"ng-click"=>"goto_step_clicked(1)"}
+						Config
+				%li.text-center{"ng-class"=>"{ active: (settings.step == 2)}"}
+					%a{"ng-click"=>"goto_step_clicked(2)", "ng-disabled"=>"!enable_layout_step()"}
+						Layout
+				%li.text-center{"ng-class"=>"{ active: (settings.step == 3)}"}
+					%a{"ng-click"=>"goto_step_clicked(3)", "ng-disabled"=>"!enable_theme_step()"}
+						Theme
+				%li.text-center{"ng-class"=>"{ active: (settings.step == 4)}"}
+					%a{"ng-click"=>"goto_step_clicked(4)"}
+						Pages
+				%li.text-center{"ng-class"=>"{ active: (settings.step == 5)}"}
+					%a{"ng-click"=>"goto_step_clicked(5)"}
+						Emails
+				%li.text-center{"ng-class"=>"{ active: (settings.step == 6)}"}
+					%a{"ng-click"=>"goto_step_clicked(6)"}
+						Publish
+		.col-md-3
+			%ul.nav.action-menu-items
+				%li.pull-left.text-center{:style=>"width:33%; height: 80px; padding: 10px 0px;", "ng-click"=>"save_clicked()"}
+					%i.glyphicon.glyphicon-save{:style=>"font-size: 30px;"}
+					.text-center{:style=>"margin-top: 10px"}
+						Save
+				%li.pull-left.text-center{:style=>"width:34%; height: 80px; padding: 10px 0px;", "ng-click"=>"cancel_clicked()"}
+					%i.glyphicon.glyphicon-ban-circle{:style=>"font-size: 30px;"}
+					.text-center{:style=>"margin-top: 10px"}
+					Cancel
+				%li.pull-left.text-center{:style=>"width:33%; height: 80px;  padding: 10px 0px;", "ng-click"=>"publish_clicked()"}
+					%i.glyphicon.glyphicon-ok{:style=>"font-size: 30px;"}
+					.text-center{:style=>"margin-top: 10px"}
+					Publish
+.setup_give_flow
 	%div.top-nav{:style => "min-height: 35px"}
 		.row-wrapper-fluid
-			.row{"size-column"=>""}
-				.col-md-9.no-gutter{"size-column"=>""}
+			.row
+				.col-md-10.col-md-offset-1
 					%div
-						%div#left-nav{"ng-controller"=>"NavigationController"}
-							%ul.nav.steps-menu-items.pull-left
-								%li.text-center
-								%li.text-center
-									%a{"ng-click"=>"goto_step_clicked(1)"}
-										%i.icon-large.icon-cogs{"ng-style"=>"highlight_step(1)"}
-
-								%li.text-center
-									%a{"ng-click"=>"goto_step_clicked(2)", "ng-disabled"=>"!enable_layout_step()"}
-										%i.icon-large.icon-building{"ng-style"=>"highlight_step(2); disabled_step_styling(2)"}
-
-								%li.text-center
-									%a{"ng-click"=>"goto_step_clicked(3)", "ng-disabled"=>"!enable_theme_step()"}
-										%i.icon-large.icon-tint{"ng-style"=>"highlight_step(3); disabled_step_styling(3)"}
-
-								%li.text-center
-									%a{"ng-click"=>"goto_step_clicked(4)"}
-										%i.icon-large.icon-file{"ng-style"=>"highlight_step(4); disabled_step_styling(4)"}
-
-								%li.text-center
-									%a{"ng-click"=>"goto_step_clicked(5)"}
-										%i.icon-large.icon-envelope{"ng-style"=>"highlight_step(5); disabled_step_styling(5)"}
-
-								%li.text-center
-									%a{"ng-click"=>"goto_step_clicked(6)"}
-										%i.icon-large.icon-bullhorn{"ng-style"=>"highlight_step(6); disabled_step_styling(6)"}
-					%div{:style=>"position: absolute; top: 0px; left: 100px; width: 100%; padding-right: 100px;"}
 						%form{"name"=>"petition_setup", "novalidate" => "", "role"=>"form"}
-							%div
-								%h2.contenteditable.petition-title{:style=>"display: inline-block; line-height: 54px;", "contenteditable"=>"true", "ng-model" => "petition.name", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Give Your Campaign a Name", "name"=>"petition_name", "required"=>""}
-									New Campaign Name
 							%div
 								%ul.nav.action-menu-items.pull-left
 									
@@ -43,23 +51,3 @@
 								%div.text-right{:style => "margin-right: 20px;", "ng-show"=>"show_next_button()"}
 									%button.btn.btn-lg.btn-success{"ng-click"=>"next_step_clicked(petition_setup)", :style=>"width: 100px"}
 										Next!
-				.col-md-3.no-gutter{:style=>"border-left: solid 1px white;", "size-column"=>""}
-					%ul.nav.action-menu-items
-						%li.pull-left.text-center{:style=>"width:33%; height: 80px; padding: 10px 0px;", "ng-click"=>"save_clicked()"}
-							%i.glyphicon.glyphicon-save{:style=>"font-size: 30px;"}
-							.text-center{:style=>"margin-top: 10px"}
-								Save
-						%li.pull-left.text-center{:style=>"width:34%; height: 80px; padding: 10px 0px;", "ng-click"=>"cancel_clicked()"}
-							%i.glyphicon.glyphicon-ban-circle{:style=>"font-size: 30px;"}
-							.text-center{:style=>"margin-top: 10px"}
-							Cancel
-						%li.pull-left.text-center{:style=>"width:33%; height: 80px;  padding: 10px 0px;", "ng-click"=>"publish_clicked()"}
-							%i.glyphicon.glyphicon-ok{:style=>"font-size: 30px;"}
-							.text-center{:style=>"margin-top: 10px"}
-							Publish
-					%div
-						%div{:style=>"background: #FF9900; color: white; border-bottom: solid 1px #ccc; height: 80px;"}
-							.text-center{:style=>"font-size: 32px; line-height: 80px;"}
-								{{petition.status || 'Draft'}}
-						%div#side-bar
-							%div{"ng-include"=>"", "src"=>"sidebar_template_urls()"}
