updates home page

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -13,9 +13,9 @@
           %li
             %a.scroll.brand-4{href: "#features", title: "Check out our awesome services"} Features
           %li
-            %a.scroll.brand-3{href: "#assets", title: "Themes assets"} Assets
+            %a.scroll.brand-3{href: "#assets", title: "Themes assets"} About
           %li
-            %a.scroll.fadeto.brand-4{href: "#about", title: "Who we are"} About us
+            %a.scroll.fadeto.brand-4{href: "#about", title: "Who we are"} Get Started
           %li
             %a.scroll.brand-2{href: "#contact", title: "Get in touch!"} Contact
           %li
@@ -24,7 +24,8 @@
   / Home Page
   #home.page.color-1
     .inner-page
-      %h2.page-headline.large Tell your projects awesome story.
+      %h2.page-headline.large 
+        Take a Moment, Start a Movement
     .row.inner-page
       .col-md-8.col-md-push-4.lazy-container
         %img.lazy{alt: "Looks great on every device", "data-original" => "assets/home.png", src: "assets/pixel.png"}/
@@ -32,16 +33,16 @@
         %ul.big-list
           %li
             %i.fa.fa-check
-            Flat design
+            Petition Microsites
           %li
             %i.fa.fa-tablet
-            Responsive
+            Interactive Polls
           %li
             %i.fa.fa-cloud
-            Bootstrap 3
+            Social Media Integration
           %li
             %i.fa.fa-cog
-            Built with LESS
+            Embedded Videos
         %br/
         %a.scroll.btn.btn-primary.btn-centered{href: "#features", title: "Check out more freatures!"}
           %i.fa.fa-caret-down
@@ -78,7 +79,7 @@
         %h4.pull-left They say visitors prefer scrolling rather than clicking. We combined both.
         %a.scroll.btn.btn-primary.pull-right{href: "#features", title: "Check out more freatures!"}
           %i.fa.fa-caret-down
-          Scroll down
+          Start Here
   / /.sign-up
   / Feature page
   #features.page.color-4
@@ -154,7 +155,7 @@
   / Assets page
   #assets.page.color-3
     .inner-page
-      %h2.page-headline Page assets
+      %h2.page-headline Page Builder
     / Vectors
     .row.inner-page
       .col-md-6.lazy-container
@@ -185,7 +186,7 @@
           %li
             %img{alt: "John Cornyn Campaign", src: "assets/logos/john_cornyn_logo.png"}
           %li
-            %img{alt: "John Cornyn Campaign", src: "assets/logos/cuccinelli_logo.jpg"}
+            %img{alt: "John Cornyn Campaign", src: "assets/logos/cuccinelli_logo.png"}
           %li
             %img{alt: "John Cornyn Campaign", src: "assets/logos/bearing_drift_logo.png"}
           
