Changed copy and layout

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -11,187 +11,124 @@
           %li.active
             %a.scroll.brand-1{href: "#home", title: "Home page"} Home
           %li
-            %a.scroll.brand-4{href: "#features", title: "Check out our awesome services"} Features
+            %a.scroll.brand-4{href: "#features", title: "What Is It"} What Is Snaptivist?  
           %li
-            %a.scroll.brand-3{href: "#assets", title: "Themes assets"} Assets
+            %a.scroll.brand-1{href: "#video", title: "Web video"} How It Works
           %li
-            %a.scroll.fadeto.brand-4{href: "#about", title: "Who we are"} About us
+            %a.scroll.brand-4{href: "#assets", title: "Features"} Features
           %li
-            %a.scroll.brand-2{href: "#contact", title: "Get in touch!"} Contact
+            %a.scroll.brand-1{href: "#about", title: "About Us"} About Us
           %li
-            %a.scroll.brand-3{href: "#signup", title: "Sign Up"} Sign Up
+            %a.scroll.brand-4{href: "#contact", title: "Get Started!"} Get Started  
     / /.navbar-container
   / Home Page
   #home.page.color-1
     .inner-page
-      %h2.page-headline.large Tell your projects awesome story.
+      %h2.page-headline.large Empower Your People
     .row.inner-page
       .col-md-8.col-md-push-4.lazy-container
         %img.lazy{alt: "Looks great on every device", "data-original" => "assets/home.png", src: "assets/pixel.png"}/
       .col-md-4.col-md-pull-8
         %ul.big-list
+          Launch Free Action Sites With Snaptivist:
           %li
             %i.fa.fa-check
-            Flat design
+            Online Petitions 
           %li
-            %i.fa.fa-tablet
-            Responsive
+            %i.fa.fa-check
+            Interactive Polls
           %li
-            %i.fa.fa-cloud
-            Bootstrap 3
+            %i.fa.fa-check
+            Issue Surveys
           %li
-            %i.fa.fa-cog
-            Built with LESS
+            %i.fa.fa-check
+            Event Invites
         %br/
-        %a.scroll.btn.btn-primary.btn-centered{href: "#features", title: "Check out more freatures!"}
+        %a.scroll.btn.btn-primary.btn-centered{href: "#video", title: "How It Works"}
           %i.fa.fa-caret-down
-          Learn more
+          How It Works
   / /#home
-  / Sign up
-  #signup.page.color-3
-    .inner-page
-      %h2.page-headline Page assets
-    / Vectors
-    .row.inner-page
-      .col-md-6.lazy-container
-        %img.figurette.lazy{alt: "Original vectors", "data-original" => "assets/responsive-vectors.png", src: "assets/pixel.png"}/
-      .col-md-6
-        %h3 5 vectors included
-        %p.lead
-          Zombie ipsum
-          = succeed "reversus" do
-            %abbr.initialism{title: "HyperText Markup Language"} HTML
-        %p The voodoo sacerdos flesh eater, suscitat mortuos comedere carnem virus. Zonbi tattered for solum oculi eorum defunctis go lum cerebro..
-    / /vectors
-    %hr/
-    / Big laptop
-    .row.inner-page
-      .col-md-offset-1.col-md-10
-        .lazy-container.lazy-large.btn-container.loaded
-          .btn-container
-            %img.figurette.lazy{alt: "view image in lightbox", "data-original" => "assets/laptop-blue@2x.png", src: "assets/laptop-blue@2x.png", style: "display: inline;"}/
-            %a.lightbox.btn-play{href: "assets/superman.jpg", target: "_blank"}
-              %i.fa.fa-search-plus
-  .sign-up.color-2.visible-lg
-    .row.inner-page
-      .col-md-12
-        %h4.pull-left They say visitors prefer scrolling rather than clicking. We combined both.
-        %a.scroll.btn.btn-primary.pull-right{href: "#features", title: "Check out more freatures!"}
-          %i.fa.fa-caret-down
-          Scroll down
-  / /.sign-up
   / Feature page
   #features.page.color-4
-    .inner-page
-      %h2.page-headline About Snaptivist
-    .inner-page.row
+    .inner-page        
+      %h2.page-headline Snaptivist Is A Web App Built for Digital Organizers
       %ul.features.list-inline
         %li
           %h3
-            %i.fa.fa-cog
-            Make it your own
-          %p Snaptivist was designed to allow anyone to create and publish high-quality landing pages that inspire online engagement.
-        %li
-          %h3
-            %i.fa.fa-heart
-            Page speed
-          %p Your customizable landing page includes the ability to collect signatures or votes through online petitions or polls.
+            %i.fa.fa-check
+            Launch Advocacy Campaigns
+          %p Create unlimited custom action sites, including petitions, polls, events, and more for supporter acquisition and engagement.
         %li
           %h3
             %i.fa.fa-tablet
-            For every device.
-          %p Users can take action by entering an email address or through their Facebook account
-    .row.inner-page
-      .col-md-6.lazy-container
-        %img.figurette.lazy{alt: "Zombie ipsum", "data-original" => "assets/two-phones.png", src: "assets/pixel.png"}/
-      .col-md-6
-        %h3 All artwork included
-        %p.lead Present your project properly. Create your own art from included templates
-        %ul.list-wide
-          %li
-            %i.fa.fa-check
-            Snaptivist was designed to allow anyone to create and publish high-quality landing pages that inspire online engagement.
-          %li
-            %i.fa.fa-check
-            Your customizable landing page includes the ability to collect signatures or votes through online petitions or polls.
-          %li
-            %i.fa.fa-check
-            Users can take action by entering an email address or through their Facebook account
-          %li
-            %i.fa.fa-check
-            Have an ad or web video to promote? YouTube videos can be embedded in any landing page
-          %li
-            %i.fa.fa-check
-            Link a Twitter account to automatically send a custom tweet every time someone takes an action
-    %hr/
-    / Video
-    .row.inner-page
-      .col-md-6.col-md-push-6
-        .btn-container.figurette
-          %img{alt: "Play video", src: "assets/video.png"}/
-          %a.lightbox.iframe.btn-play{href: "hhttp://www.youtube.com/watch?v=ewey46RxXZk", target: "_blank"}
-            %i.fa.fa-play
-      .col-md-6.col-md-pull-6
-        %ul.big-list
-          %li
-            %i.fa.fa-check
-            Always latest bootstrap
-          %li
-            %i.fa.fa-play
-            Responsive video
-          %li
-            %i.fa.fa-expand
-            Adaptive, smart lightbox
-          %li
-            %i.fa.fa-desktop
-            All modern browsers supported
-        %br/
-        %a.scroll.btn.btn-primary.btn-centered{href: "#assets"}
+            Recruit Supporters
+          %p Learn about the interests, location, and even Facebook friends of your top supporters, as well as the best email address to contact them.
+        %li
+          %h3
+            %i.fa.fa-heart
+            Increase Engagement
+          %p Ask supporters to share a link, volunteer time, donate money, or anything else after they show interest by taking action.
+        %hr/
+        %a.scroll.btn.btn-primary.btn-centered{href: "#contact"}
           %i.fa.fa-caret-down
-          Even more features
+          Get Started!
   / /#features
-
-  / Assets page
-  #assets.page.color-3
+  / Video
+  #video.page.color-1
+    .row.inner-page
+      .col-md-offset-3.col-md-10
+        %img{alt: "Play video", src: "assets/video.png"}/
+        %a.lightbox.iframe.btn-play{href: "http://www.youtube.com/watch?v=ewey46RxXZk", target: "_blank"}
+          %i.fa.fa-play
     .inner-page
-      %h2.page-headline Page assets
-    / Vectors
+      %h2.page-headline Already Working With Snaptivist
+      %ul.clients.list-inline
+        %li
+          %img{alt: "John Cornyn for Senate", src: "assets/logos/john_cornyn_logo.png"}
+        %li
+          %img{alt: "Cuccinelli for Governor", src: "assets/logos/cuccinelli_logo.jpg"}
+        %li
+          %img{alt: "BearingDrift.com", src: "assets/logos/bearing_drift_logo.png"}             
+  / /#video
+  / Assets page
+  #assets.page.color-4
+    .inner-page
+    %h2.page-headline Right Message. Right Time. Right Audience. 
     .row.inner-page
       .col-md-6.lazy-container
         %img.figurette.lazy{alt: "Original vectors", "data-original" => "assets/responsive-vectors.png", src: "assets/pixel.png"}/
       .col-md-6
-        %h3 5 vectors included
+        %h3 Never miss a news cycle. 
         %p.lead
-          Zombie ipsum
-          = succeed "reversus" do
-            %abbr.initialism{title: "HyperText Markup Language"} HTML
-        %p The voodoo sacerdos flesh eater, suscitat mortuos comedere carnem virus. Zonbi tattered for solum oculi eorum defunctis go lum cerebro..
-    / /vectors
-    %hr/
-    / Big laptop
-    .row.inner-page
-      .col-md-offset-1.col-md-10
-        .lazy-container.lazy-large.btn-container.loaded
-          .btn-container
-            %img.figurette.lazy{alt: "view image in lightbox", "data-original" => "assets/laptop-blue@2x.png", src: "assets/laptop-blue@2x.png", style: "display: inline;"}/
-            %a.lightbox.btn-play{href: "assets/superman.jpg", target: "_blank"}
-              %i.fa.fa-search-plus
-    / Clients
-    .clients.color-1
-      .inner-page
-        %h2.page-headline Who's using Snaptivist.
-      .inner-page.row
-        %ul.clients.list-inline
+          Launch world-class online advocacy campaigns in minutes with no technical skills required.
+        %ul.list
           %li
-            %img{alt: "John Cornyn Campaign", src: "assets/logos/john_cornyn_logo.png"}
+            %i.fa.fa-cog
+            Collect contact info when supporters take action using their email address or Facebook account.
           %li
-            %img{alt: "John Cornyn Campaign", src: "assets/logos/cuccinelli_logo.jpg"}
+            %i.fa.fa-cog
+            Publish your campaign as a microsite and/or Facebook Fan Page tab.
           %li
-            %img{alt: "John Cornyn Campaign", src: "assets/logos/bearing_drift_logo.png"}
-          
-  / /#assets
+            %i.fa.fa-cog
+            Auto-tweet delivers a customized message on Twitter every time an action is taken.
+          %li
+            %i.fa.fa-cog
+            Embed custom graphics or web videos directly into your action page.
+          %li
+            %i.fa.fa-cog
+            Create a unique custom URL for every action.
+          %li
+            %i.fa.fa-cog
+            Track the number of actions taken and Facebook shares from your user dashboard.  
+          %li
+            %i.fa.fa-cog
+            Integrate directly with your CRM through our API or export data in CSV format.
+          %li
+            %i.fa.fa-cog
+            Redirect action-takers to any landing page you want.  
+  / /#assets        
   / About page
-  #about.page.color-4
+  #about.page.color-1
     .inner-page
       %h2.page-headline Who are we and how it all got started. Our story.
     .row.inner-page
@@ -242,41 +179,26 @@
               %i.fa.fa-github-square
   / /#about
   / Contact page
-  #contact.page.color-2
-    .inner-page
-      %h2.page-headline Get in touch and stay updated
+  #contact.page.color-4 
     .row.inner-page.contact
       .col-md-6
-        %h3 What's on your mind?
+        %h3 Sign Up To Get Started
         %form#contact-form
-          %textarea.form-control{placeholder: "Your story", rows: "6"}
+          %textarea.form-control{placeholder: "Tell us how Snaptivist can help you...", rows: "6"}
           %input.form-control{placeholder: "your@e-mail.com", type: "text"}/
           %input.form-control{placeholder: "Name", type: "text"}/
-          %button.btn.btn-primary.btn-centered Contact us
+          %button.btn.btn-primary.btn-centered Go
       .col-md-6
         .btn-container.centered.lazy-container.text-center
           %img.lazy.figurette{alt: "Open the map", "data-original" => "assets/map.png", src: "assets/pixel.png"}/
-          %a.lightbox.iframe.btn-map{href: "https://maps.google.com/maps?q=Stationsplein,+1012+Centrum,+Amsterdam,+Noord-Holland,+The+Netherlands&hl=en", target: "blank", title: "Open google maps"}
+          %a.lightbox.iframe.btn-map{href: "https://maps.google.com/maps?t=m&sll=30.3077609,-97.7534014&sspn=0.4553753,0.7034114&q=Austin,+TX&output=classic&dg=opt", target: "blank", title: "Open google maps"}
             %i.pull-left.fa.fa-map-marker
             %div
-              Stationsplein, 1012 AB,
+              Snaptivist HQ,
               %br>/
-              Amsterdam,
+              Austin,
               %br/
-              The Netherlands
-  / /#contact
-  / Newsletter
-  .newsletter.color-1
-    .inner-page.row
-      .col-md-4
-        %h4
-          %strong> Be cool
-          , subscribe to get our latest news
-      .col-md-6
-        %input.subscribe{name: "EMAIL", placeholder: "your@e-mail.com", type: "email"}/
-      .col-md-2
-        %button.btn.btn-primary.pull-right.btn-block{type: "submit"} Subscribe
-  / /newsletter
+              Texas
   / The footer, social media icons, and copyright
   %footer.page.color-5
     .inner-page.row
